--- a/reset.css
+++ b/reset.css
@@ -27,7 +27,7 @@
 
 
 body{
-    font-family: "WorkSans-SemiBold";
+    font-family: "WorkSans-Regular";
     font-weight: 400;
     font-size: 16px;
     line-height: 1.9rem;
