--- a/style.css
+++ b/style.css
@@ -7,6 +7,17 @@
     margin-top: 150px;
 }
 
-picture img{
-    display: block;
+/* FAQ Header Starts */
+.faq-card_header{
+    display: flex;
+    gap: 0.6rem;
+    align-items: center;
 }
+.faq-card_header img{
+    width: 22px;
+}
+.faq-card_header h1{
+    font-family: WorkSans-Bold;
+}
+/* FAQ Header Ends */
+
