--- a/reset.css
+++ b/reset.css
@@ -1,9 +1,10 @@
 :root{
-    --primary-color: hsl(275, 100%, 97%);
-    --secondary-color: hsl(292, 16%, 49%);
-
+    --primary-color: hsl(292, 42%, 14%);
+    --secondary-color: hsl(278 84.2% 55.3%);
+    
     --neutral-color-body-bg: hsl(0, 0%, 100%);
-    --tertiary-color: hsl(292, 42%, 14%);
+    --tertiary-color: hsl(295, 19%, 63%);
+    --border-color: hsl(252 55.6% 98.2%);
 }
 *{
     margin: 0;
@@ -25,21 +26,29 @@
     src:url("assets/fonts/static/WorkSans-SemiBold.ttf");
 }
 
-
+html{
+    font-size: 14px;
+}
 body{
-    font-family: "WorkSans-Regular";
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.9rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     background-image: url(assets/images/background-pattern-mobile.svg);
     background-repeat: no-repeat;
     background-position: top center;
     background-size: contain;
     background-color: var(--neutral-color-body-bg);
+    color: var(--tertiary-color);
+    font-family: "WorkSans-Regular";
+    font-weight: 400;
+    line-height: 1.9rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+body h2{
+    font-size: 1.2rem;
+    color: var(--primary-color);
+    padding-right: 60px;
+    margin-bottom: 1.6rem;
 }
 
 img{
