--- a/responsive.css
+++ b/responsive.css
@@ -1,5 +1,12 @@
-@media only screen and (min-width: 767px){
+@media only screen and (min-width: 600px){
     body{
         background-image: url(assets/images/background-pattern-desktop.svg);
+    }
+    
+}
+
+@media only screen and (min-width: 600px) and (max-width: 900px){
+    .faq-card{
+        margin-top: 70px;
     }
 }
