--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@
 .faq-card_summary{
     display: flex;
     justify-content: space-between;
+    position: relative;
 }
 .faq-card_summary span{
     font-size: 18px;
@@ -55,6 +56,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: absolute;
+    right: 0;
+}
+.active:after{
+    content: "-";
+    background-color: var(--primary-color);
 }
 .summary_toogle-btn span:nth-child(even){
     display: none;
